fix:[servicos] add missing border radius

--- a/src/styles/servicos.scss
+++ b/src/styles/servicos.scss
@@ -178,6 +178,7 @@
 
     &__image {
         width: 19.604vw;
+        border-radius: 1.171vw;
         object-fit: cover;
     }
 
